added create cocktail card to index

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,4 +10,8 @@
       <% end  %> 
     </div>
   <% end %>
+  <div class="card-category">
+    <h3><%= link_to "Make Your Own...", new_cocktail_path %></h3>
+    You deserve it
+  </div>
 </div>
