--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,13 @@
 
 .card-category {
   color: $gray;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  h3 {
+    font-size: 3em;
+    margin: 0;
+    color:black;
+    }
 }
 
 a {
@@ -15,12 +22,6 @@ a {
     color: $gray;
     text-decoration: none;
   }
-}
-
-h3 {
-font-size: 3em;
-margin: 0;
-color:black;
 }
 
 .card-category-show {
