--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -23,6 +23,7 @@ $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
 // Override other variables below!
-h1 {
-  font-size: 3em;
-}
+// h1 {
+//   font-size: 3em;
+//   margin-top: 50px;
+// }
