--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,7 +1,9 @@
-<h1>Add an Ingredient</h1>
+<div class = "container">
+  <h1>Add an Ingredient</h1>
 
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.input :description %>
-  <%= f.association :ingredient, collection: @ingredients %>
-  <%= f.submit %>
-<%end %>
+  <%= simple_form_for [@cocktail, @dose] do |f| %>
+    <%= f.input :description %>
+    <%= f.association :ingredient, collection: @ingredients %>
+    <%= f.submit %>
+  <%end %>
+</div>
