--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,14 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// put your fundelmental elements here
+body {
+  text-align: center;
+}
+
+h1 {
+  margin-top: 32px;
+  font-size: 5em;
+  color: black;
+}
