--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,8 @@
 @import "alert";
 @import "avatar";
 @import "card";
+@import "container";
 @import "form";
+@import "header";
 @import "image";
 @import "navbar";
