--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-page">
   <h1 class="main-header">Cocktails at "The Wagon"</h1>
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
