--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,9 +1,9 @@
-<div class = "container">
+<div class = "container-page">
   <h1>Add an Ingredient</h1>
 
   <%= simple_form_for [@cocktail, @dose] do |f| %>
     <%= f.input :description %>
     <%= f.association :ingredient, collection: @ingredients %>
-    <%= f.submit %>
+    <%= f.submit value: "Add Ingredient" %>
   <%end %>
 </div>
