--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-page">
   <h1 class="main-header">New Cocktail</h1>
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name%>
