updates styles for all pages

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="cards">
     <div class="card-category-show">
-      <%= link_to "Can you make #{@cocktail.name} better?", new_cocktail_dose_path(@cocktail) %>
+      <%= link_to "Let's improve #{@cocktail.name}", new_cocktail_dose_path(@cocktail) %>
     </div>
     <div class="card-category-show">
       <%= link_to "Why not make you own?", new_cocktail_path %>
